feat(jdk8): 测试代码全面降级至 JDK 8 兼容（test-compile 全绿）
1.0.x 最后一项语法债：约 60 个 2.0.x 同步新增的测试文件降级完成，
全 reactor test-compile 在 JDK 8 下通过。

## 模块测试依赖补齐（同步新增测试所需）
- ddd4j-annotation：junit-jupiter / assertj / archunit-junit5
- ddd4j-kit：assertj
- ddd4j-core：assertj / mockito-core / mockito-junit-jupiter
- ddd4j-data-cqrs：junit / assertj / archunit
- ddd4j-data-cqrs-{javalin,dropwizard,vertx}：junit / assertj / mockito / archunit
- ddd4j-data-projection-{javalin,dropwizard,vertx}：同上
- ddd4j-data-{mybatis,mybatisplus}：junit / assertj / mockito
- ddd4j-data-datascope：junit / assertj（并纳入 data 聚合根 reactor）
- ddd4j-runtime-support：junit / assertj
- ddd4j-runtime-spring：+ ddd4j-runtime-testkit (test)
- ddd4j-web-core：junit / assertj / mockito / mockito-junit-jupiter
- ddd4j-web-webmvc：testkit / junit / assertj / mockito / otel / spring-test / mockito-junit-jupiter
- ddd4j-web-webflux：junit / assertj / mockito / testkit / otel / spring-test
- ddd4j-web-{vertx,micronaut,helidon,dropwizard}：otel (test)
- ddd4j-auth-{satoken,security,shiro}：junit / assertj / mockito
- ddd4j-extension-{qlexpress,monitor}：assertj / mockito / hutool-http(test 已有)
- ddd4j-extension-otel：ddd4j-auth-datascope (test)

## 测试源码降级要点
- switch 箭头/throw-switch → 传统 switch（AsyncStoredEventTest、
  StoredEventStrongTypeContractTest、Ddd4jWebMvcContractTest、Ddd4jWebFluxHttpContractTest）
- record（含嵌套测试 record）→ final class（equals/hashCode/toString 全量生成，22 文件）
- var → 显式类型；Optional.isEmpty() → !isPresent()；stream.toList() → collect
- Map.of/List.of/Set.of 各形态 → singletonMap/LinkedHashMap/Arrays.asList 等
- String.isBlank/strip/repeat、URLDecoder.decode(Charset)、readAllBytes/readNBytes → JDK8 等价
- Files.writeString → Files.write(getBytes)
- Javalin 5 API cfg.startup.showJavalinBanner → 移除（Javalin 4 无此配置）
- Dropwizard 5 测试 import io.dropwizard.core.* → io.dropwizard.*（2.1.12 命名空间）
- JacksonException → JsonProcessingException；jakarta → javax ConstraintViolationException
- 匿名内部类 diamond（new X<>() {}）→ 显式类型参数

## 删除（依赖 2.0.x-only 基础设施，