@@ -1,5 +1,6 @@
 package io.ddd4j.mq.redisstream;
 
+import java.util.Collections;
 import io.ddd4j.mq.message.MessageHeaders;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -75,10 +76,7 @@ class RedisStreamMQClientTest {
 
     @Test
     void messageId_shouldPreferStableHeaderAndReadLegacyHeader() {
-        assertEquals("stable-id", RedisStreamMQClient.messageId(Map.of(
-                MessageHeaders.HEADER_MESSAGE_ID, "stable-id",
-                MessageHeaders.LEGACY_HEADER_MESSAGE_ID, "legacy-id")));
-        assertEquals("legacy-id", RedisStreamMQClient.messageId(Map.of(
-                MessageHeaders.LEGACY_HEADER_MESSAGE_ID, "legacy-id")));
+        assertEquals("stable-id", RedisStreamMQClient.messageId(new java.util.LinkedHashMap<String, String>() {{ put(MessageHeaders.HEADER_MESSAGE_ID, "stable-id"); put(MessageHeaders.LEGACY_HEADER_MESSAGE_ID, "legacy-id"); }}));
+        assertEquals("legacy-id", RedisStreamMQClient.messageId(Collections.singletonMap(MessageHeaders.LEGACY_HEADER_MESSAGE_ID, "legacy-id")));
     }
 }
